// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot tests Tipseen content tests renders correctly with dismiss - deprecated version 1`] = `
<div
  className="tipseenBasicContent"
  data-testid="tipseen-content"
>
  <div
    className="buttons"
  >
    <button
      aria-busy={false}
      aria-disabled={false}
      className="dismiss button sizeSmall kindTertiary colorOnPrimaryColor"
      data-testid="tipseen-content-dismiss"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Dismiss
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="button sizeSmall kindPrimary colorOnPrimaryColor"
      data-testid="tipseen-content-submit"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Submit
    </button>
  </div>
</div>
`;

exports[`Snapshot tests Tipseen content tests renders correctly with dismiss 1`] = `
<div
  className="tipseenBasicContent"
  data-testid="tipseen-content"
>
  <div
    className="buttons"
  >
    <button
      aria-busy={false}
      aria-disabled={false}
      className="dismiss button sizeSmall kindTertiary colorOnPrimaryColor"
      data-testid="tipseen-content-dismiss"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Dismiss
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="button sizeSmall kindPrimary colorOnPrimaryColor"
      data-testid="tipseen-content-submit"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Submit
    </button>
  </div>
</div>
`;

exports[`Snapshot tests Tipseen content tests renders correctly without props 1`] = `
<div
  className="tipseenBasicContent"
  data-testid="tipseen-content"
>
  <div
    className="buttons"
  >
    <button
      aria-busy={false}
      aria-disabled={false}
      className="button sizeSmall kindPrimary colorOnPrimaryColor"
      data-testid="tipseen-content-submit"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Submit
    </button>
  </div>
</div>
`;

exports[`Snapshot tests Tipseen content tests renders correctly without submit - deprecated version 1`] = `
<div
  className="tipseenBasicContent"
  data-testid="tipseen-content"
>
  <div
    className="buttons"
  />
</div>
`;

exports[`Snapshot tests Tipseen content tests renders correctly without submit 1`] = `
<div
  className="tipseenBasicContent"
  data-testid="tipseen-content"
>
  <div
    className="buttons"
  />
</div>
`;

exports[`Snapshot tests Tipseen tests renders correctly with dark close button theme 1`] = `
[
  <div
    className="monday-storybook-tipseen_container"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />,
  <span
    className="monday-style-dialog-content-wrapper contentWrapper"
    data-popper-reference-hidden={false}
    data-testid="tooltip"
    onClickCapture={[Function]}
    style={
      {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      className="contentComponent bottom edgeCenter hasTooltip"
    >
      <div
        className="tooltip primary paddingSizeUndefined tipseenWrapper tipseenWrapperWithoutCustomWidth"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div>
          <div
            className="tipseenHeader"
          >
            <button
              aria-busy={false}
              aria-disabled={false}
              aria-label="Close"
              className="tipseenCloseButton dark button sizeMedium kindTertiary colorDark noSidePadding"
              data-testid="icon-button"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              style={
                {
                  "alignItems": "center",
                  "height": "24px",
                  "justifyContent": "center",
                  "padding": 0,
                  "width": "24px",
                }
              }
              type="button"
            >
              <svg
                aria-hidden={true}
                className="icon noFocusStyle"
                data-testid="icon"
                fill="currentColor"
                height="16"
                onClick={[Function]}
                viewBox="0 0 20 20"
                width="16"
              >
                <path
                  d="M6.331 5.27a.75.75 0 0 0-1.06 1.06L8.94 10l-3.67 3.668a.75.75 0 1 0 1.06 1.06L10 11.06l3.668 3.669a.75.75 0 0 0 1.06-1.06l-3.668-3.67 3.67-3.669a.75.75 0 0 0-1.061-1.06L10 8.939l-3.669-3.67Z"
                />
              </svg>
            </button>
          </div>
          <p
            className="typography onPrimary start text text2Normal tipseenContent"
            data-testid="text"
          />
        </div>
      </div>
      <div
        className="arrow arrow primary paddingSizeUndefined"
        data-placement="bottom"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          {
            "position": "absolute",
          }
        }
      />
    </div>
  </span>,
]
`;

exports[`Snapshot tests Tipseen tests renders correctly with floating variation 1`] = `
<span
  className="monday-style-dialog-content-wrapper contentWrapper"
  data-popper-reference-hidden={false}
  data-testid="tooltip"
  onClickCapture={[Function]}
  style={
    {
      "left": "0",
      "position": "absolute",
      "top": "0",
    }
  }
>
  <div
    className="contentComponent bottom edgeCenter"
  >
    <div
      className="tooltip primary paddingSizeUndefined tipseenWrapper tipseenWrapperWithoutCustomWidth floating"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div>
        <div
          className="tipseenHeader"
        >
          <button
            aria-busy={false}
            aria-disabled={false}
            aria-label="Close"
            className="tipseenCloseButton button sizeMedium kindTertiary colorOnPrimaryColor noSidePadding"
            data-testid="icon-button"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            style={
              {
                "alignItems": "center",
                "height": "24px",
                "justifyContent": "center",
                "padding": 0,
                "width": "24px",
              }
            }
            type="button"
          >
            <svg
              aria-hidden={true}
              className="icon noFocusStyle"
              data-testid="icon"
              fill="currentColor"
              height="16"
              onClick={[Function]}
              viewBox="0 0 20 20"
              width="16"
            >
              <path
                d="M6.331 5.27a.75.75 0 0 0-1.06 1.06L8.94 10l-3.67 3.668a.75.75 0 1 0 1.06 1.06L10 11.06l3.668 3.669a.75.75 0 0 0 1.06-1.06l-3.668-3.67 3.67-3.669a.75.75 0 0 0-1.061-1.06L10 8.939l-3.669-3.67Z"
              />
            </svg>
          </button>
        </div>
        <p
          className="typography onPrimary start text text2Normal tipseenContent"
          data-testid="text"
        />
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshot tests Tipseen tests renders correctly without close - deprecated version 1`] = `
[
  <div
    className="monday-storybook-tipseen_container"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />,
  <span
    className="monday-style-dialog-content-wrapper contentWrapper"
    data-popper-reference-hidden={false}
    data-testid="tooltip"
    onClickCapture={[Function]}
    style={
      {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      className="contentComponent bottom edgeCenter hasTooltip"
    >
      <div
        className="tooltip primary paddingSizeUndefined tipseenWrapper tipseenWrapperWithoutCustomWidth"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div>
          <div
            className="tipseenHeader"
          />
          <p
            className="typography onPrimary start text text2Normal tipseenContent"
            data-testid="text"
          />
        </div>
      </div>
      <div
        className="arrow arrow primary paddingSizeUndefined"
        data-placement="bottom"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          {
            "position": "absolute",
          }
        }
      />
    </div>
  </span>,
]
`;

exports[`Snapshot tests Tipseen tests renders correctly without close 1`] = `
[
  <div
    className="monday-storybook-tipseen_container"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />,
  <span
    className="monday-style-dialog-content-wrapper contentWrapper"
    data-popper-reference-hidden={false}
    data-testid="tooltip"
    onClickCapture={[Function]}
    style={
      {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      className="contentComponent bottom edgeCenter hasTooltip"
    >
      <div
        className="tooltip primary paddingSizeUndefined tipseenWrapper tipseenWrapperWithoutCustomWidth"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div>
          <div
            className="tipseenHeader"
          />
          <p
            className="typography onPrimary start text text2Normal tipseenContent"
            data-testid="text"
          />
        </div>
      </div>
      <div
        className="arrow arrow primary paddingSizeUndefined"
        data-placement="bottom"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          {
            "position": "absolute",
          }
        }
      />
    </div>
  </span>,
]
`;

exports[`Snapshot tests Tipseen tests renders correctly without props 1`] = `
[
  <div
    className="monday-storybook-tipseen_container"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />,
  <span
    className="monday-style-dialog-content-wrapper contentWrapper"
    data-popper-reference-hidden={false}
    data-testid="tooltip"
    onClickCapture={[Function]}
    style={
      {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      className="contentComponent bottom edgeCenter hasTooltip"
    >
      <div
        className="tooltip primary paddingSizeUndefined tipseenWrapper tipseenWrapperWithoutCustomWidth"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div>
          <div
            className="tipseenHeader"
          >
            <button
              aria-busy={false}
              aria-disabled={false}
              aria-label="Close"
              className="tipseenCloseButton button sizeMedium kindTertiary colorOnPrimaryColor noSidePadding"
              data-testid="icon-button"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              style={
                {
                  "alignItems": "center",
                  "height": "24px",
                  "justifyContent": "center",
                  "padding": 0,
                  "width": "24px",
                }
              }
              type="button"
            >
              <svg
                aria-hidden={true}
                className="icon noFocusStyle"
                data-testid="icon"
                fill="currentColor"
                height="16"
                onClick={[Function]}
                viewBox="0 0 20 20"
                width="16"
              >
                <path
                  d="M6.331 5.27a.75.75 0 0 0-1.06 1.06L8.94 10l-3.67 3.668a.75.75 0 1 0 1.06 1.06L10 11.06l3.668 3.669a.75.75 0 0 0 1.06-1.06l-3.668-3.67 3.67-3.669a.75.75 0 0 0-1.061-1.06L10 8.939l-3.669-3.67Z"
                />
              </svg>
            </button>
          </div>
          <p
            className="typography onPrimary start text text2Normal tipseenContent"
            data-testid="text"
          />
        </div>
      </div>
      <div
        className="arrow arrow primary paddingSizeUndefined"
        data-placement="bottom"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          {
            "position": "absolute",
          }
        }
      />
    </div>
  </span>,
]
`;

exports[`Snapshot tests TipseenTitle should render correctly with given text 1`] = `
<div
  aria-level={3}
  className="typography inherit start multiLineEllipsis text text1Bold title"
  data-testid="tipseen-title"
  role="heading"
  style={
    {
      "--text-clamp-lines": "2",
    }
  }
>
  I'm a title
</div>
`;

exports[`Snapshot tests TipseenTitle should render null without text 1`] = `null`;
